<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/real_data_chart"
        android:padding="5dp"
        />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="30dp"
           android:text="@string/real_steps" />

       <TextView
           android:id="@+id/step_tv_view"
           android:layout_width="32dp"
           android:layout_height="match_parent"
           android:gravity="left"
           android:text="0" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="30dp"
            android:textColor="#FFCD41"
           android:text="@string/real_heartrate" />

       <TextView
           android:id="@+id/heart_tv_view"
           android:layout_width="32dp"
           android:layout_height="match_parent"
           android:gravity="left"
           android:textColor="#FFCD41"
           android:text="0" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="30dp"
           android:textColor="#ff33b5e5"
           android:text="@string/real_temeprature" />

       <TextView
           android:id="@+id/temp_tv_view"
           android:layout_width="32dp"
           android:layout_height="match_parent"
           android:textColor="#ff33b5e5"
           android:gravity="left"
           android:text="0" />
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="30dp"
           android:textColor="#458B00"
           android:text="@string/real_pressure" />

       <TextView
           android:id="@+id/at_tv_view"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:gravity="left"
           android:textColor="#458B00"
           android:text="0" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="30dp"
           android:textColor="#4B0082"
           android:text="@string/altitude" />

       <TextView
           android:id="@+id/al_tv_view"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:textColor="#4B0082"
           android:gravity="left"
           android:text="0" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="30dp"
           android:textColor="#CD0000"
           android:text="@string/envir_tempeature" />

       <TextView
           android:id="@+id/am_tv_view"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:textColor="#CD0000"
           android:gravity="left"
           android:text="0" />
   </LinearLayout>  
    <lecho.lib.hellocharts.view.LineChartView
	    android:id="@+id/line_chart"
	    android:layout_width="fill_parent"
	    android:layout_height="360dp"
	    android:background="#ffffff"/>
    
 
</LinearLayout>
